<resources>
    <string name="app_name">Plant Scan</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="your_name">Your Name</string>
    <string name="register">Register</string>
    <string name="reset">Reset</string>
    <string name="resetpassword_message">Your email address will serve as a backup and a login credential</string>
    <string name="resetpassword_title">Enter your email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="navigate_message">Daftar Disini</string>
    <string name="login_message">Belum punya akun?</string>
    <string name="detail_title">Aristolochia Acuminata</string>
    <string name="detail_heading">Aristolochia indica var. magna, Aristolochia tagala</string>
    <string name="description">Deskripsi</string>
    <string name="detail_description">Lorem ipsum dolor sit amet consectetur. Aliquet fringilla est egestas felis cras ut velit in. Sem nulla nisl iaculis faucibus. Ipsum neque dictum amet vulputate auctor. Non nibh leo lorem tincidunt dictum amet semper. Quis sit eu ultricies mauris lobortis. Senectus mollis nulla duis habitasse enim sed tortor.</string>
    <string name="detail_message">Rekomendasi Untuk Kamu</string>
    <string name="welcome_message">Selamat Datang</string>
    <string name="firstonboarding_message">Dengan PlantScan, jelajahi keindahan hutan dan kenali setiap tanaman dengan mudah</string>
    <string name="holder_secondoption">Gunakan</string>
    <string name="holder_firstoption">Kembali</string>
    <string name="favorite_empty">Belum ada favorite</string>
    <string name="profile_title">My Account</string>
    <string name="username">Username</string>
    <string name="change_profile">Change Profile</string>
    <string name="change_password">Change Password</string>
    <string name="help">Help</string>
    <string name="app_info">App Info</string>
    <string name="logout">Logout</string>
    <string name="scan">Scan</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="favorite_description">Aristolochia Acuminata</string>
    <string name="scan_kenali_dan_pelajari_tentang_berbagai_tanaman_hutan_di_sekitar_anda">Scan, kenali, dan pelajari tentang berbagai tanaman hutan di sekitar Anda.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="nama_latin_tanaman">Nama Latin Tanaman</string>
    <string name="sinonim_tanaman">Sinonim tanaman</string>
    <string name="suhu_tanaman">20-38℃</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="rekomendasi">Rekomendasi Untuk Kamu</string>
    <string name="empty_favorite">belum ada favorite</string>
    <string name="cd_flashbtn">Tombol Flash Camera</string>
    <string name="cd_flipbtn">Tombol Flip Camera</string>
    <string name="cd_gallerybtn">Tombol Gallery Camera</string>
    <string name="cd_RvItemFav">gambar pada recycleView</string>
    <string name="cd_bottomNavBar">bottom navigation bar</string>
    <string name="cd_ic_temp">icon temperature</string>
    <string name="cd_ic_backBtn">Tombol kembali</string>
    <string name="cd_ic_fav_btn">tombol favorite</string>
    <string name="favorite_title">Favorite</string>
    <string name="cd_ic_scan_btn">ikon tombol scan</string>
    <string name="btn_scan_detail">Scan tanaman</string>
    <string name="cancel">Cancel</string>
</resources>