<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_reset_password"
tools:context=".ui.primary.other.ChangePasswordFragment">

<TextView
    android:id="@+id/enter_mail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginHorizontal="29dp"
    android:text="@string/resetpassword_title"
    android:textColor="@color/green"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

<TextView
    android:id="@+id/reset_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginHorizontal="29dp"
    android:text="@string/resetpassword_message"
    android:textColor="@color/green"
    android:textSize="12sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/enter_mail"
    />

<EditText
    android:id="@+id/reset_ed_email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="19dp"
    android:layout_marginHorizontal="29dp"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    app:errorEnabled="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/reset_text"
    app:layout_constraintBottom_toTopOf="@id/reset_button" />

<Button
    android:id="@+id/reset_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="29dp"
    android:backgroundTint="@color/green"
    android:padding="12dp"
    android:text="@string/reset"
    android:textColor="@android:color/white"
    app:layout_constraintTop_toBottomOf="@id/reset_ed_email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_default="spread"
    tools:layout_editor_absoluteY="319dp" />


</androidx.constraintlayout.widget.ConstraintLayout>