<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.primary.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImageViewStyle"
        android:src="@drawable/ex_profile" />


    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

    <TextView
        android:id="@+id/tv_change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change_profile"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_profile" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_btnproflie"
        android:drawableStart="@drawable/carbon_password"
        android:drawableEnd="@drawable/arrow_black"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingStart="10dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_btnproflie"
        android:drawableStart="@drawable/carbon_help"
        android:drawableEnd="@drawable/arrow_black"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingStart="10dp"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password" />

    <Button
        android:id="@+id/btn_appinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_btnproflie"
        android:drawableStart="@drawable/ph_info"
        android:drawableEnd="@drawable/arrow_black"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingStart="10dp"
        android:text="@string/app_info"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_btnproflie"
        android:drawableStart="@drawable/carbon_logout"
        android:drawableEnd="@drawable/arrow_black"
        android:gravity="start|center_vertical"
        android:paddingHorizontal="10dp"
        android:paddingStart="10dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_appinfo" />
</androidx.constraintlayout.widget.ConstraintLayout>