<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.primary.detail_tanaman.DetailTanamanActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="start|top"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/ic_btn_back"
            android:contentDescription="@string/cd_ic_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_back" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_favorite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="end|top"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/ic_btn_favorite"
            android:contentDescription="@string/cd_ic_fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_btn_fav" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/green"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_btn_scan"
                android:contentDescription="@string/cd_ic_scan_btn"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginVertical="7dp"
                android:src="@drawable/ic_btn_scan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_scan_detail"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_detail_tanaman"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/DetailPhoto"
                tools:src="@drawable/kaktus" />

            <TextView
                android:id="@+id/plant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nama_latin_tanaman"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/iv_detail_tanaman"
                app:layout_constraintStart_toStartOf="@+id/iv_detail_tanaman"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_tanaman" />

            <TextView
                android:id="@+id/tv_plant_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/sinonim_tanaman"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/plant_name"
                app:layout_constraintStart_toStartOf="@+id/plant_name"
                app:layout_constraintTop_toBottomOf="@+id/plant_name" />

            <LinearLayout
                android:id="@+id/linear_layout_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_plant_name2"
                app:layout_constraintStart_toStartOf="@+id/tv_plant_name2"
                app:layout_constraintTop_toBottomOf="@+id/tv_plant_name2">

                <ImageView
                    android:id="@+id/temp_icon"
                    android:contentDescription="@string/cd_ic_temp"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_temperature" />

                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/suhu_tanaman"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_descPlant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/bone"
                app:cardCornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_date">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:text="@string/deskripsi" />

                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:text="Lorem ipsum dolor sit amet consectetur." />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linear_layout_recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/cv_descPlant">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rekomendasi"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_rekomendasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="80dp"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_favorite" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>