<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtop_login"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_bottom">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_ed_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="29dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/ed_custom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/login_ed_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text" />

        <EditText
            android:id="@+id/login_ed_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="29dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ed_custom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_ed_email" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            android:layout_marginStart="32dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ed_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password"
            app:layout_constraintWidth_default="spread" />

        <TextView
            android:id="@+id/login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="16dp"
            android:text="@string/login_message"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/register_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/navigate_message"
            android:textColor="@color/green"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/login_message"
            app:layout_constraintTop_toTopOf="@id/login_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>