<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgtop_register"
    tools:context=".ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_bottom">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_text"
            app:layout_constraintBottom_toTopOf="@id/register_ed_password" />

        <EditText
            android:id="@+id/register_ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_ed_email"
            app:layout_constraintBottom_toTopOf="@id/register_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="29dp"
            android:backgroundTint="@color/green"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/register_ed_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="spread"
            tools:layout_editor_absoluteY="319dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>